# tc397_tft

./: .clang-format  CMakeLists.txt  README.md  justfile  tricore-gcc-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/wineftd2xx/: ftd2xx.c  ftd2xx.spec
Configurations/: CMakeLists.txt
Libraries/: CMakeLists.txt
blinky/: CMakeLists.txt  Cpu0_Main.c
multicore/: CMakeLists.txt  Cpu0_Main.c  Cpu1_Main.c  Cpu2_Main.c  Cpu3_Main.c  Cpu4_Main.c  Cpu5_Main.c
